# test_task_python_dev

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py
app/api/routes/: __init__.py  catalog.py
app/clients/: __init__.py  wildberries.py
app/core/: __init__.py  config.py
app/domain/: __init__.py  enums.py  exceptions.py  models.py
app/schemas/: __init__.py  catalog.py
app/services/: catalog_parser.py  xlsx_exporter.py
app/utils/: __init__.py  wildberries.py
